{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 85,
  "lineage": "de09d250-ddf2-8fc9-20b1-368eeb534b29",
  "resources": [
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-028fe7822745a8c31",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0bd3777718064b8c1",
              "subnet-0ceedb9d964271d63"
            ],
            "tags": {
              "Name": "TransitGateway-VPC-Attachment"
            },
            "tags_all": {
              "Name": "TransitGateway-VPC-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_id": "vpc-0828676a85368a010",
            "vpc_owner_id": "533267341577"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0120a1d24f172c13f",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0967757bbf9e8b397",
              "subnet-0ba1d81aa9a056822"
            ],
            "tags": {
              "Name": "TransitGateway-VPC-Attachment"
            },
            "tags_all": {
              "Name": "TransitGateway-VPC-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_id": "vpc-021a5ebd8765454be",
            "vpc_owner_id": "654654163064"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment_accepter",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0120a1d24f172c13f",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0967757bbf9e8b397",
              "subnet-0ba1d81aa9a056822"
            ],
            "transit_gateway_attachment_id": "tgw-attach-0120a1d24f172c13f",
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_id": "vpc-021a5ebd8765454be",
            "vpc_owner_id": "654654163064"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0f47f5b2f4294ed68",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f47f5b2f4294ed68519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f47f5b2f4294ed68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ec2_transit_gateway_vpc_attachment.source",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        },
        {
          "index_key": "rtb-0f91ca3850d4802eb",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f91ca3850d4802eb519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f91ca3850d4802eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ec2_transit_gateway_vpc_attachment.source",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "index_key": "rtb-03694d12130a3ee16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03694d12130a3ee162056622336",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03694d12130a3ee16",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        },
        {
          "index_key": "rtb-0a95cb0a679c62206",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a95cb0a679c622062056622336",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a95cb0a679c62206",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0ac3a013ce5be122c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.transit_gateway",
            "module.transit_gateway.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.transit_gateway.aws_ram_principal_association.target_account",
            "module.transit_gateway.aws_ram_resource_association.transit_gateway",
            "module.transit_gateway.aws_ram_resource_share.transit_gateway_share"
          ]
        }
      ]
    }
  ]
}